# watchdo

./: Cargo.toml  README.md
src/: command_history.rs  command_runner.rs  executor.rs  main.rs
