[package]
name = "watchdo"
description = "Run commands whenever files in a directory change."
version = "0.1.0"
authors = ["Shelby Doolittle <shelby@shelbyd.com>"]
license = "MIT"
homepage = "https://github.com/shelbyd/watchdo"
repository = "https://github.com/shelbyd/watchdo"
edition = "2018"

[dependencies]
colored = "1.8"
crossbeam-channel = "=0.3.8"
ignore = "0.4.10"
notify = { git = "https://github.com/notify-rs/notify", rev = "75f8bd9304" }
structopt = "0.3"
subprocess = "0.1.11"
term_size = "0.3.1"

[dev-dependencies]
mockall = "=0.5.1"

[features]
strict = []
